--- a/experiments/fitCurveConfig.json
+++ b/experiments/fitCurveConfig.json
@@ -1,17 +1,17 @@
 {
     "geneset": "fitcurve",
     "trainerParameters": {
-        "maxNumThreads": 16,
+        "maxNumThreads": 8,
         "numIslands": 16,
-        "rngSeed": 42,
-        "terminationFitness": 0.00001,
+        "rngSeed": 1234,
+        "terminationFitness": -1,
         "terminationNumEpochs": 10000,
         "checkpointFrequency": 100,
         "consoleFrequency": 10
     },
     "islandParameters": {
         "numGenotypes": 5,
-        "numIterationsPerEpoch": 1000,
+        "numIterationsPerEpoch": 500,
         "numEvaluationSamples": 200,
         "evalStartIndex": 0
     },
@@ -34,7 +34,8 @@
     "checkpointSaverParameters": {
         "outputDirectory": "ckpt",
         "generateCode": true,
-        "generateImage": true
+        "generateImage": true,
+        "generatePredictions": true
     },
     "geneParameters": {
         "add": {
