--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,11 @@ cmake_minimum_required(VERSION 2.8.3)
 #set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
 project(CgpExperiments)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -march=native -std=c++17 -O0 -g")
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -march=native -std=c++17 -O3 -g")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -march=native -std=c++17 -O0 -g")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -march=native -std=c++17 -O3 -g")
 
 find_package(OpenMP REQUIRED)
+find_package(OpenCV REQUIRED)
 
 #SET(CMAKE_BUILD_TYPE "Debug")
 #SET(CMAKE_BUILD_TYPE "Release")
@@ -25,6 +26,7 @@ file(GLOB fitCurve_SRC
 include_directories(
     core/include
     fitCurve/include
+    ${OpenCV_INCLUDE_DIRS}
 )
 
 add_executable(TrainCgp
@@ -46,4 +48,13 @@ add_executable(DumpBuffers
     application/dumpBuffers.cpp
     ${core_SRC}
     ${fitCurve_SRC}
+)
+
+add_executable(DisplayImages
+    application/displayImages.cpp
+    ${core_SRC}
+)
+
+target_link_libraries(DisplayImages
+    ${OpenCV_LIBRARIES}
 )
