--- a/experiments/fitCurveConfig.json
+++ b/experiments/fitCurveConfig.json
@@ -1,5 +1,6 @@
 {
     "geneset": "fitcurve",
+    "dataType": "float",
     "trainerParameters": {
         "maxNumThreads": 8,
         "numIslands": 16,
