Add ConstantOutput gene for images and experiment config for card.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,15 +3,15 @@ cmake_minimum_required(VERSION 2.8.3)
 #set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
 project(CgpExperiments)
 
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -march=native -std=c++17 -O0 -g")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -march=native -std=c++17 -O3 -g")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -march=native -std=c++17 -O0 -g")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -march=native -std=c++17 -O3 -g")
 
 find_package(OpenMP REQUIRED)
 find_package(OpenCV REQUIRED)
 
 #SET(CMAKE_BUILD_TYPE "Debug")
 #SET(CMAKE_BUILD_TYPE "Release")
-SET(CMAKE_VERBOSE_MAKEFILE ON)
+#SET(CMAKE_VERBOSE_MAKEFILE ON)
 
 file(GLOB core_SRC
     "core/src/*.cpp"
