Add exe to view gene perf. Also fix missing std::to_string() calls in some gene serialization functions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,3 +74,14 @@ add_executable(DisplayImages
 target_link_libraries(DisplayImages
     ${OpenCV_LIBRARIES}
 )
+
+add_executable(GenePerfTest
+    application/genePerfTest.cpp
+    ${core_SRC}
+    ${fitCurve_SRC}
+    ${image_SRC}
+)
+
+target_link_libraries(GenePerfTest
+    ${OpenCV_LIBRARIES}
+)
