--- a/experiments/satteliteConfig.json
+++ b/experiments/satteliteConfig.json
@@ -201,37 +201,44 @@
         {
             "sampleWidth": 500,
             "sampleHeight": 500,
-            "fileName": "/mnt/data_disk/cgpData/firstAttempt/firstAttempt_r.dat"
+            "fileName": "/mnt/data_disk/cgpData/firstAttempt/firstAttempt_r.dat",
+            "displayName": "red"
         },
         {
             "sampleWidth": 500,
             "sampleHeight": 500,
-            "fileName": "/mnt/data_disk/cgpData/firstAttempt/firstAttempt_g.dat"
+            "fileName": "/mnt/data_disk/cgpData/firstAttempt/firstAttempt_g.dat",
+            "displayName": "green"
         },
         {
             "sampleWidth": 500,
             "sampleHeight": 500,
-            "fileName": "/mnt/data_disk/cgpData/firstAttempt/firstAttempt_b.dat"
+            "fileName": "/mnt/data_disk/cgpData/firstAttempt/firstAttempt_b.dat",
+            "displayName": "blue"
         },
         {
             "sampleWidth": 500,
             "sampleHeight": 500,
-            "fileName": "/mnt/data_disk/cgpData/firstAttempt/firstAttempt_h.dat"
+            "fileName": "/mnt/data_disk/cgpData/firstAttempt/firstAttempt_h.dat",
+            "displayName": "hue"
         },
         {
             "sampleWidth": 500,
             "sampleHeight": 500,
-            "fileName": "/mnt/data_disk/cgpData/firstAttempt/firstAttempt_l.dat"
+            "fileName": "/mnt/data_disk/cgpData/firstAttempt/firstAttempt_l.dat",
+            "displayName": "luminance"
         },
         {
             "sampleWidth": 500,
             "sampleHeight": 500,
-            "fileName": "/mnt/data_disk/cgpData/firstAttempt/firstAttempt_s.dat"
+            "fileName": "/mnt/data_disk/cgpData/firstAttempt/firstAttempt_s.dat",
+            "displayName": "saturation"
         },
         {
             "sampleWidth": 500,
             "sampleHeight": 500,
-            "fileName": "/mnt/data_disk/cgpData/firstAttempt/firstAttempt_gray.dat"
+            "fileName": "/mnt/data_disk/cgpData/firstAttempt/firstAttempt_gray.dat",
+            "displayName": "grayscale"
         }
     ]
 }
