Add multi-objective loss for images

--- a/experiments/cardConfig.json
+++ b/experiments/cardConfig.json
@@ -27,7 +27,8 @@
         "mutationType": "singleActive"
     },
     "fitnessFunctionParameters": {
-        "name": "mcc"
+        "name": "mccperf",
+        "lambda": 0.0001
     },
     "genePoolParameters": {
         "initialPoolSize": 1
